# erebus

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: client.rs  crypto.rs  database.rs  error.rs  formatting.rs  lib.rs  message.rs  server.rs
core/src/client/: command.rs  context.rs  error.rs  event.rs  message.rs  state.rs
core/src/client/state/: authentication.rs
core/src/crypto/: password.rs  private_key.rs  public_key.rs  registration_challenge.rs
core/src/database/: entity.rs  pw_verify.rs
core/src/server/: command.rs  connection.rs  connection_handler.rs  context.rs  event.rs  message.rs  services.rs  socket_id.rs  state.rs
core/src/server/entities/: invite_code.rs
core/src/server/message/: error.rs
core/src/server/services/: invite_code.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: commands.rs  main.rs
server-cli/src/commands/: invite.rs
server-cli/src/commands/invite/: generate.rs  list.rs
server-docker/: .env  Dockerfile  Makefile  docker-compose.yml
server/src/: main.rs
