[package]
name = "erebus-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
client = ["tokio/time"]
server = ["tokio/sync"]

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = "2.0.1"
chacha20poly1305 = "0.10.1"
dashmap = "6.1.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
redb = "3.1.0"
rmp-serde = "1.3.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-util", "net"] }
tracing = { version = "0.1.41", features = ["release_max_level_off"] }
zeroize = "1.8.2"
zstd = "0.13.3"