[package]
name = "erebus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
erebus-core = { workspace = true, features = ["server"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }